--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
             fill: #ffb0b0;
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PL5T9SZN07"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PL5T9SZN07');
+    </script>
 </head>
 <body class="body">
     <section class="section">
