--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My personal webiste, feel free to reach out to me through provided social media">
     <title>Mateusz Juruś - Web Developer</title>
     <style>
         @import url('./static/UbuntuCondensed-Regular');
