--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h1 class="title">Mateusz Juruś</h1>
         <h2 class="subtitle">Web Developer</h2>
         <div class="social">
-           <a href="https://www.linkedin.com/in/mateusz-juruś" target="_blank" rel="noopener noreferrer"><?xml version="1.0" encoding="iso-8859-1"?>
+           <a href="https://www.linkedin.com/in/mateusz-juruś" title="LinkedIn" target="_blank" rel="noopener noreferrer"><?xml version="1.0" encoding="iso-8859-1"?>
             <svg class="icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 455 455" xml:space="preserve">
             <g>
