--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         @font-face {
             font-family: 'Ubuntu Condensed';
             src: url('./static/UbuntuCondensed-Regular.ttf');
+            font-display: swap;
         }
 
         * {
